<resources>
    <string name="app_name">PalTales</string>
    <string name="welcome">Welcome To PalTales</string>
    <string name="login">Log In</string>
    <string name="username">Username</string>
    <string name="email">Email:</string>
    <string name="wrongus">Wrong Username</string>
    <string name="wronguse">Pick another username</string>
    <string name="wrongpas">Wrong password</string>
    <string name="pass">Password:</string>
    <string name="create">Create Account</string>
    <string name="signUp">Sign Up</string>
    <string name="creat1">Create</string>
    <string name="remeber">Remember Me</string>
    <string name="see_mov">See Movies?</string>
    <string name="see_books">See Books?</string>
    <string name="back">Home</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="start">Getting Started</string>
    <string name="dont">Create account?</string>
    <string name="backk">Back To List</string>
    <string name="already">Already have account?</string>
    <string name="about">Wanna Know about Palestine? Paltales let\'s explore movies and books about Palestine</string>
    <string name="try_again">Try Again!</string>
</resources>